Fixed drag and drop with scrollbar

--- a/frontend/tableApp/src/app/sorting-control/sorting-control.component.css
+++ b/frontend/tableApp/src/app/sorting-control/sorting-control.component.css
@@ -14,13 +14,8 @@
 }
 
 .example-list {
-  max-width: 100%;
-  border: solid 1px #ccc;
-  min-height: 60px;
-  display: block;
-  background: white;
-  border-radius: 4px;
-  overflow: hidden;
+  overflow: auto;
+  height: 256px;
 }
 
 .example-box {
